--- a/src/App.css
+++ b/src/App.css
@@ -5,31 +5,33 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.planet {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+  overflow: hidden;
+  border-radius: 50%;
+  position: relative;
 }
 
-@keyframes logo-spin {
+/*.planet-img {*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  */
+/*}*/
+
+.planet.mercury:hover .planet-img {
+  /* filter: drop-shadow(0 0 20px rgba(7, 6, 0, 0.8)); */
+  animation: planet-spin 10s linear infinite;
+}
+
+@keyframes planet-spin {
   from {
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   to {
     transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
   }
 }
 
